--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-*
-!.config/
-!.spacemacs.d/
-!.uim.d/
-!filter-file
-!my.rclone
-!shortcut
-!.gitmodules
-!.gitignore
-!.vimrc_bak
-!.xmobarrc
+/*
+!/.config/
+!/.spacemacs.d/
+!/.uim.d/
+!/filter-file
+!/my.rclone
+!/shortcut
+!/.gitmodules
+!/.gitignore
+!/.vimrc_bak
+!/.xmobarrc
+!/system/
+!/user/
