--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 !/.config/
 !/.spacemacs.d/
 !/.uim.d/
-!/filter-file
+!/filter-file-upload
+!/filter-file-download
 !/my.rclone
 !/shortcut
 !/.gitmodules
